# assignment-4-search-engine

./: .gitignore  Answers.md  CMakeLists.txt  DS_AVLTree.h  DS_AVLTree_test.cpp  Doc.cpp  Doc.h  DocParser.h  Hashing.h  Hashing_tester.cpp  IndexHandler.cpp  IndexHandler.h  IndexHandler_test.cpp  QueryProcessor.cpp  QueryProcessor.h  QueryProcessor_tester.cpp  README.md  User_Interface.h  main.cpp  porter2_stemmer.h  rapidJSONExample.cpp  stopWords.txt
